@@ -13,9 +13,3 @@ allprojects {
 
 dependencies {
 }
-
-subprojects{
-    tasks.withType(Test).configureEach{
-        jvmArgs =  ['--add-opens java.base/java.lang=ALL-UNNAMED', '--add-opens java.base/java.lang.reflect=ALL-UNNAMED']
-    }
-}
